api-dummy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dummy-deployment
  labels:
    app: apiDummy
  namespace: linkerd-project
spec:
  selector:
    matchLabels:
      app: api-dummy
  replicas: 3
  template:
    metadata:
      labels:
        app: api-dummy
    spec:
      containers:
      - name: api-dummy
        image: nginx:latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: api-service
spec:
  selector:
    app: apiDummy
  ports:
    - port: 80 # Default port for image
