deployment_grpc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
  namespace: linkerd-project
spec:
  replicas: 3
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-publisher
        image: sicmmar/client_grpc
        imagePullPolicy: Always
        ports:
          - containerPort: 80
      - name: grpc-subscriber
        image: sicmmar/server_grpc
        imagePullPolicy: Always
          - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
  namespace: linkerd-project
spec:
  ports:
  - name: service
    port: 80
  selector:
    app: grpc-client
